@@ -7,9 +7,9 @@ using System.Text;
 using HttPlaceholder.Application.Configuration;
 using HttPlaceholder.Application.Configuration.Provider;
 using HttPlaceholder.Common.Utilities;
-using HttPlaceholder.Domain;
 using HttPlaceholder.Infrastructure.Configuration;
 using HttPlaceholder.Resources;
+using HttPlaceholder.Utilities.Implementations;
 using Microsoft.AspNetCore.Hosting;
 using Microsoft.AspNetCore.Server.Kestrel.Core;
 using Microsoft.Extensions.Configuration;
@@ -32,7 +32,7 @@ public static class ProgramUtilities
     ///     Configure the logging.
     /// </summary>
     /// <param name="args">The command line arguments.</param>
-    public static void ConfigureLogging(IEnumerable<string> args)
+    public static void ConfigureLogging(string[] args)
     {
         var verbose = IsVerbose(args);
         var loggingConfig = new LoggerConfiguration();
@@ -51,14 +51,13 @@ public static class ProgramUtilities
     ///     Handle several commands.
     /// </summary>
     /// <param name="args">The command line arguments.</param>
-    public static void HandleCommands(IEnumerable<string> args)
+    public static void HandleCommands(string[] args)
     {
         var version = AssemblyHelper.GetAssemblyVersion();
-        var argsArray = args as string[] ?? args.ToArray();
-        HandleArgument(() => Console.WriteLine(version), argsArray, _versionArgs);
+        HandleArgument(() => Console.WriteLine(version), args, _versionArgs);
 
         Console.WriteLine(ManPage.VersionHeader, version, DateTime.Now.Year);
-        HandleArgument(() => Console.WriteLine(GetManPage()), argsArray, _helpArgs);
+        HandleArgument(() => Console.WriteLine(GetManPage()), args, _helpArgs);
     }
 
     /// <summary>
@@ -77,15 +76,13 @@ public static class ProgramUtilities
             Console.WriteLine(GetVerbosePage(argsDictionary, args));
         }
 
-        return Host.CreateDefaultBuilder(args)
+        return HostBuilderUtilities.CreateHostBuilder()
             .UseSerilog()
             .ConfigureAppConfiguration((_, config) => config.AddCustomInMemoryCollection(argsDictionary))
-            .ConfigureWebHostDefaults(webBuilder =>
-            {
-                webBuilder.UseStartup<Startup>()
-                    .UseKestrel(options => ConfigureKestrel(options, settings))
-                    .UseIIS();
-            })
+            .ConfigureWebHostDefaults(webBuilder => webBuilder
+                .UseStartup<Startup>()
+                .UseKestrel(options => ConfigureKestrel(options, settings))
+                .UseIIS())
             .Build();
     }
 
@@ -105,8 +102,7 @@ public static class ProgramUtilities
     private static void HandleArgument(
         Action action,
         IEnumerable<string> args,
-        IEnumerable<string> argKeys,
-        bool exit = true)
+        IEnumerable<string> argKeys)
     {
         if (!args.Any(argKeys.Contains))
         {
@@ -114,10 +110,7 @@ public static class ProgramUtilities
         }
 
         action();
-        if (exit)
-        {
-            Environment.Exit(0);
-        }
+        Environment.Exit(0);
     }
 
     private static SettingsModel DeserializeSettings(IDictionary<string, string> args)
@@ -129,8 +122,9 @@ public static class ProgramUtilities
 
     private static void ConfigureKestrel(KestrelServerOptions options, SettingsModel settings)
     {
+        var utility = new ProgramUtility();
         options.AddServerHeader = false;
-        var (httpPorts, httpsPorts) = GetPorts(settings);
+        var (httpPorts, httpsPorts) = utility.GetPorts(settings);
         foreach (var port in httpPorts)
         {
             options.Listen(IPAddress.Any, port);
@@ -171,57 +165,6 @@ public static class ProgramUtilities
         builder.AppendLine(ManPage.CmdExample);
 
         return builder.ToString();
-    }
-
-    private static int[] ParsePorts(string input)
-    {
-        var result = new List<int>();
-        var httpPorts = input.Split(',').Select(p => p.Trim());
-        foreach (var port in httpPorts)
-        {
-            if (!int.TryParse(port, out var parsedPort) || parsedPort is < 1 or > 65535)
-            {
-                throw new ArgumentException($"Port '{port}' is invalid.");
-            }
-
-            result.Add(parsedPort);
-        }
-
-        return result.ToArray();
-    }
-
-    private static (IEnumerable<int> httpPorts, IEnumerable<int> httpsPorts) GetPorts(SettingsModel settings)
-    {
-        var httpPortsResult = new List<int>();
-        var httpsPortsResult = new List<int>();
-
-        var httpPorts = ParsePorts(settings.Web.HttpPort);
-        if (httpPorts.Length == 1 && httpPorts[0] == DefaultConfiguration.DefaultHttpPort &&
-            TcpUtilities.PortIsTaken(httpPorts[0]))
-        {
-            httpPortsResult.Add(TcpUtilities.GetNextFreeTcpPort());
-        }
-        else
-        {
-            httpPortsResult.AddRange(httpPorts);
-        }
-
-        if (settings.Web.UseHttps && !string.IsNullOrWhiteSpace(settings.Web.PfxPath) &&
-            !string.IsNullOrWhiteSpace(settings.Web.PfxPassword))
-        {
-            var httpsPorts = ParsePorts(settings.Web.HttpsPort);
-            if (httpsPorts.Length == 1 && httpsPorts[0] == DefaultConfiguration.DefaultHttpsPort &&
-                TcpUtilities.PortIsTaken(httpsPorts[0]))
-            {
-                httpsPortsResult.Add(TcpUtilities.GetNextFreeTcpPort());
-            }
-            else
-            {
-                httpsPortsResult.AddRange(httpsPorts);
-            }
-        }
-
-        return (httpPortsResult, httpsPortsResult);
     }
 
     private static bool IsVerbose(IEnumerable<string> args)
